--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,17 @@
     tools:context=".MainActivity"
     android:weightSum="1">
 
+        <android.support.design.widget.AppBarLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            >
+            <include
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                layout="@layout/toolbar_layout"
+                />
+
+            ></android.support.design.widget.AppBarLayout>
     <ListView
         android:id="@+id/song_list"
         android:layout_width="fill_parent"
