--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#feaa02</color>
+    <color name="colorPrimary">#fdb202</color>
     <color name="colorPrimaryDark">#25cdbc</color>
     <color name="colorAccent">#ebf7ff00</color>
 </resources>
