--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -9,6 +10,30 @@
     tools:context=".MainActivity"
     android:weightSum="1">
 
+    <android.support.design.widget.AppBarLayout
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        >
+        <include
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            layout="@layout/toolbar_layout"
+            />
+
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tabLayout"
+            app:tabMode="fixed"
+            app:tabGravity="fill"
+            ></android.support.design.widget.TabLayout>
+    </android.support.design.widget.AppBarLayout>
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewPager"
+        ></android.support.v4.view.ViewPager>
     <ListView
         android:id="@+id/song_list"
         android:layout_width="fill_parent"
@@ -16,14 +41,6 @@
         android:layout_weight="0.20">
     </ListView>
 
-    <Button
-        android:text="View Bluetooth Devices"
-        android:layout_width="301dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/Button"
-        style="@style/Widget.AppCompat.Button"
-        android:elevation="12dp"
-        android:onClick="showBluetooth" />
         android:textColorLink="@android:color/holo_red_light"
         android:textColor="@color/colorAccent"
         app:backgroundTint="@color/highlighted_text_material_light"
