--- a/app/src/main/res/layout/activity_bluetooth_devices.xml
+++ b/app/src/main/res/layout/activity_bluetooth_devices.xml
@@ -13,15 +13,6 @@
     tools:context="cs117.musicshare.BluetoothDevices"
     app:backgroundTint="@color/colorPrimary">
 
-    <Button
-        android:text="Back to Music"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button"
-        android:onClick="backMain"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
 
     <TextView
         android:text="Settings"
@@ -34,28 +25,38 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <ListView
+        android:id="@+id/bluelist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#4A9C67"
+        android:layout_below="@+id/btList"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="17dp">
+        android:visible="false"
+    </ListView>
+
+    <Button
+        android:id="@+id/buttonOn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Turn on Bluetooth"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="76dp" />
+
     <Button
         android:id="@+id/button_scan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:enabled="false"
         android:text="scan devices"
-        android:layout_marginTop="41dp"
-        android:layout_below="@+id/textView"
+        android:layout_marginTop="11dp"
+        android:layout_below="@+id/buttonOn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
-    <ListView
-        android:id="@+id/bluelist"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#4A9C67"
-        android:layout_marginTop="36dp"
-        android:layout_below="@+id/btList"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-        android:visible="false"
-    </ListView>
 
     <TextView
         android:text="Currently paired devices"
@@ -65,8 +66,9 @@
         android:id="@+id/btList"
         android:textSize="18sp"
         android:textColor="@color/colorPrimary"
-        android:layout_marginTop="23dp"
+        android:visible="false"
+        android:layout_marginTop="29dp"
         android:layout_below="@+id/button_scan"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
