--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -13,41 +13,51 @@
     app:backgroundTint="@color/colorPrimary">
 
     <!-- TODO: Update blank fragment layout -->
-
     <Button
         android:id="@+id/button_scan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="scan devices"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="50dp"
         android:layout_below="@+id/textView"
         android:elevation="0dp"
-        android:enabled="true"
+        android:enabled="false"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <TextView
-        android:text="Currently paired devices"
+        android:text="No devices are currently paired"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/btList"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textColor="@color/background_material_dark"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="102dp"
         android:layout_below="@+id/button_scan"
         android:layout_centerHorizontal="true"
+        android:visibility="invisible"
         android:gravity="center_horizontal" />
+
+    <Button
+        android:id="@+id/buttonOn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Turn on Bluetooth"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="1dp" />
 
     <ListView
         android:id="@+id/bluelist"
+        android:visibility="invisible"
         android:layout_width="wrap_content"
-        android:layout_height="497dp"
+        android:layout_height="wrap_content"
         android:background="#4A9C67"
-        android:layout_marginTop="108dp"
+        android:layout_marginTop="138dp"
         android:layout_below="@+id/btList"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
-        android:visible="false"
     </ListView>
 
 </FrameLayout>
