--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -39,14 +39,15 @@
         android:gravity="center_horizontal" />
 
     <Button
-        android:id="@+id/buttonOn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Turn on Bluetooth"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="1dp" />
+    android:id="@+id/buttonOn"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="Turn on Bluetooth"
+    android:layout_below="@+id/textView"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_marginTop="1dp" />
+
 
     <ListView
         android:id="@+id/bluelist"
@@ -59,5 +60,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
     </ListView>
+
+    <Button
+        android:id="@+id/refresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Refresh"
+        android:enabled="false"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="10dp"
+        android:onClick="backFresh"/>
 
 </FrameLayout>
