--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -38,19 +38,6 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/connectedList"
-        android:layout_width="87dp"
-        android:layout_height="138dp"
-        android:visibility="invisible"
-        android:background="#0f0"
-        android:layout_marginBottom="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-    </ListView>
     <TextView
         android:id="@+id/Wifi2DirectLabel2"
         android:layout_marginTop="250dp"
@@ -59,12 +46,23 @@
         android:layout_height="24dp" />
 
     <ListView
+        android:id="@+id/connectedList"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:visibility="invisible"
+        android:background="#00f"
+        android:layout_below="@+id/Wifi2DirectLabel2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </ListView>
+
+    <ListView
         android:id="@+id/connectList"
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:visibility="invisible"
         android:background="#f00"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="27dp"
         android:layout_alignTop="@+id/Wifi2DirectLabel"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
