--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:visibility="invisible"
-        android:background="#00f"
+        android:background="#0f0"
         android:layout_below="@+id/Wifi2DirectLabel2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:visibility="invisible"
-        android:background="#f00"
+        android:background="#00f"
         android:layout_marginTop="27dp"
         android:layout_alignTop="@+id/Wifi2DirectLabel"
         android:layout_alignParentLeft="true"
