--- a/app/src/main/res/layout/fragment_middle.xml
+++ b/app/src/main/res/layout/fragment_middle.xml
@@ -13,20 +13,55 @@
     <ListView
         android:id="@+id/song_list"
         android:layout_width="fill_parent"
-        android:layout_height="527dp"
         android:layout_weight="0.20"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        android:layout_height="300dp">
     </ListView>
 
     <Button
         android:id="@+id/send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send! "
+        android:text="Send Music!"
         android:elevation="10dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentBottom="false"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:layout_marginTop="300dp" />
 
+    <ListView
+        android:id="@+id/chat_list"
+        android:layout_width="fill_parent"
+        android:layout_weight="0.20"
+        android:visibility="invisible"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/send"
+        android:layout_above="@+id/chatBox"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+    </ListView>
+
+    <Button
+        android:text="Enter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:visibility="invisible"
+        android:id="@+id/sendChat" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Enter text here"
+        android:ems="10"
+        android:id="@+id/chatBox"
+        android:layout_alignWithParentIfMissing="false"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:visibility="invisible"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
