--- a/app/src/main/res/layout/fragment_right.xml
+++ b/app/src/main/res/layout/fragment_right.xml
@@ -17,7 +17,9 @@
         android:layout_marginTop="80dp"
         android:text="Available Devices"
         android:layout_width="253dp"
-        android:layout_height="54dp" />
+        android:background="#0ff"
+        android:gravity="center"
+        android:layout_height="23dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,6 +44,8 @@
         android:id="@+id/Wifi2DirectLabel2"
         android:layout_marginTop="250dp"
         android:text="Connections"
+        android:background="#0f0"
+        android:gravity="center"
         android:layout_width="253dp"
         android:layout_height="24dp" />
 
@@ -50,7 +54,6 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:visibility="invisible"
-        android:background="#0f0"
         android:layout_below="@+id/Wifi2DirectLabel2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
@@ -61,7 +64,6 @@
         android:layout_width="match_parent"
         android:layout_height="130dp"
         android:visibility="invisible"
-        android:background="#00f"
         android:layout_marginTop="27dp"
         android:layout_alignTop="@+id/Wifi2DirectLabel"
         android:layout_alignParentLeft="true"
